// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date/time range picker month renders hover 1`] = `
<div
  className="date-time-range-picker-month"
>
  <div
    className="date-time-range-picker-month-daynames"
  >
    <div>
      Su
    </div>
    <div>
      Mo
    </div>
    <div>
      Tu
    </div>
    <div>
      We
    </div>
    <div>
      Th
    </div>
    <div>
      Fr
    </div>
    <div>
      Sa
    </div>
  </div>
  <div
    className="date-time-range-picker-month-days"
    onMouseLeave={[Function]}
  >
    <button
      className="other-month"
      key="day20200426"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      26
    </button>
    <button
      className="other-month"
      key="day20200427"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      27
    </button>
    <button
      className="other-month"
      key="day20200428"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      28
    </button>
    <button
      className="other-month"
      key="day20200429"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      29
    </button>
    <button
      className="other-month"
      key="day20200430"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      30
    </button>
    <button
      className=""
      key="day20200501"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      1
    </button>
    <button
      className=""
      key="day20200502"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      2
    </button>
    <button
      className=""
      key="day20200503"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      3
    </button>
    <button
      className=""
      key="day20200504"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      4
    </button>
    <button
      className=""
      key="day20200505"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      5
    </button>
    <button
      className=""
      key="day20200506"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      6
    </button>
    <button
      className=""
      key="day20200507"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      7
    </button>
    <button
      className=""
      key="day20200508"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      8
    </button>
    <button
      className=""
      key="day20200509"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      9
    </button>
    <button
      className="hover-range hover hover-past"
      key="day20200510"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      10
    </button>
    <button
      className="hover-range"
      key="day20200511"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      11
    </button>
    <button
      className="hover-range"
      key="day20200512"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      12
    </button>
    <button
      className="hover-range"
      key="day20200513"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      13
    </button>
    <button
      className="hover-range"
      key="day20200514"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      14
    </button>
    <button
      className="active active-from-date active-from-date-reverse hover-range"
      key="day20200515"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      15
    </button>
    <button
      className=""
      key="day20200516"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      16
    </button>
    <button
      className=""
      key="day20200517"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      17
    </button>
    <button
      className=""
      key="day20200518"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      18
    </button>
    <button
      className=""
      key="day20200519"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      19
    </button>
    <button
      className=""
      key="day20200520"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      20
    </button>
    <button
      className=""
      key="day20200521"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      21
    </button>
    <button
      className=""
      key="day20200522"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      22
    </button>
    <button
      className=""
      key="day20200523"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      23
    </button>
    <button
      className=""
      key="day20200524"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      24
    </button>
    <button
      className=""
      key="day20200525"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      25
    </button>
    <button
      className=""
      key="day20200526"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      26
    </button>
    <button
      className=""
      key="day20200527"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      27
    </button>
    <button
      className=""
      key="day20200528"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      28
    </button>
    <button
      className=""
      key="day20200529"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      29
    </button>
    <button
      className=""
      key="day20200530"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      30
    </button>
    <button
      className=""
      key="day20200531"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      31
    </button>
    <button
      className="other-month"
      key="day20200601"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      1
    </button>
    <button
      className="other-month"
      key="day20200602"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      2
    </button>
    <button
      className="other-month"
      key="day20200603"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      3
    </button>
    <button
      className="other-month"
      key="day20200604"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      4
    </button>
    <button
      className="other-month"
      key="day20200605"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      5
    </button>
    <button
      className="other-month"
      key="day20200606"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      6
    </button>
  </div>
</div>
`;

exports[`Date/time range picker month renders range 1`] = `
<div
  className="date-time-range-picker-month"
>
  <div
    className="date-time-range-picker-month-daynames"
  >
    <div>
      Su
    </div>
    <div>
      Mo
    </div>
    <div>
      Tu
    </div>
    <div>
      We
    </div>
    <div>
      Th
    </div>
    <div>
      Fr
    </div>
    <div>
      Sa
    </div>
  </div>
  <div
    className="date-time-range-picker-month-days"
    onMouseLeave={[Function]}
  >
    <button
      className="other-month"
      key="day20200426"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      26
    </button>
    <button
      className="other-month"
      key="day20200427"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      27
    </button>
    <button
      className="other-month"
      key="day20200428"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      28
    </button>
    <button
      className="other-month"
      key="day20200429"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      29
    </button>
    <button
      className="other-month"
      key="day20200430"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      30
    </button>
    <button
      className=""
      key="day20200501"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      1
    </button>
    <button
      className=""
      key="day20200502"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      2
    </button>
    <button
      className=""
      key="day20200503"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      3
    </button>
    <button
      className=""
      key="day20200504"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      4
    </button>
    <button
      className=""
      key="day20200505"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      5
    </button>
    <button
      className=""
      key="day20200506"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      6
    </button>
    <button
      className=""
      key="day20200507"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      7
    </button>
    <button
      className=""
      key="day20200508"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      8
    </button>
    <button
      className=""
      key="day20200509"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      9
    </button>
    <button
      className="active active-from-date in-range"
      key="day20200510"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      10
    </button>
    <button
      className="in-range"
      key="day20200511"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      11
    </button>
    <button
      className="in-range"
      key="day20200512"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      12
    </button>
    <button
      className="in-range"
      key="day20200513"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      13
    </button>
    <button
      className="in-range"
      key="day20200514"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      14
    </button>
    <button
      className="active active-until-date in-range"
      key="day20200515"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      15
    </button>
    <button
      className=""
      key="day20200516"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      16
    </button>
    <button
      className=""
      key="day20200517"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      17
    </button>
    <button
      className=""
      key="day20200518"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      18
    </button>
    <button
      className=""
      key="day20200519"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      19
    </button>
    <button
      className=""
      key="day20200520"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      20
    </button>
    <button
      className=""
      key="day20200521"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      21
    </button>
    <button
      className=""
      key="day20200522"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      22
    </button>
    <button
      className=""
      key="day20200523"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      23
    </button>
    <button
      className=""
      key="day20200524"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      24
    </button>
    <button
      className=""
      key="day20200525"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      25
    </button>
    <button
      className=""
      key="day20200526"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      26
    </button>
    <button
      className=""
      key="day20200527"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      27
    </button>
    <button
      className=""
      key="day20200528"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      28
    </button>
    <button
      className=""
      key="day20200529"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      29
    </button>
    <button
      className=""
      key="day20200530"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      30
    </button>
    <button
      className=""
      key="day20200531"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      31
    </button>
    <button
      className="other-month"
      key="day20200601"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      1
    </button>
    <button
      className="other-month"
      key="day20200602"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      2
    </button>
    <button
      className="other-month"
      key="day20200603"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      3
    </button>
    <button
      className="other-month"
      key="day20200604"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      4
    </button>
    <button
      className="other-month"
      key="day20200605"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      5
    </button>
    <button
      className="other-month"
      key="day20200606"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      6
    </button>
  </div>
</div>
`;

exports[`Date/time range picker month should render correctly 1`] = `
<div
  className="date-time-range-picker-month"
>
  <div
    className="date-time-range-picker-month-daynames"
  >
    <div>
      Su
    </div>
    <div>
      Mo
    </div>
    <div>
      Tu
    </div>
    <div>
      We
    </div>
    <div>
      Th
    </div>
    <div>
      Fr
    </div>
    <div>
      Sa
    </div>
  </div>
  <div
    className="date-time-range-picker-month-days"
    onMouseLeave={[Function]}
  >
    <button
      className="other-month"
      key="day20200426"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      26
    </button>
    <button
      className="other-month"
      key="day20200427"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      27
    </button>
    <button
      className="other-month"
      key="day20200428"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      28
    </button>
    <button
      className="other-month"
      key="day20200429"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      29
    </button>
    <button
      className="other-month"
      key="day20200430"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      30
    </button>
    <button
      className=""
      key="day20200501"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      1
    </button>
    <button
      className=""
      key="day20200502"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      2
    </button>
    <button
      className=""
      key="day20200503"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      3
    </button>
    <button
      className=""
      key="day20200504"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      4
    </button>
    <button
      className=""
      key="day20200505"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      5
    </button>
    <button
      className=""
      key="day20200506"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      6
    </button>
    <button
      className=""
      key="day20200507"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      7
    </button>
    <button
      className=""
      key="day20200508"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      8
    </button>
    <button
      className=""
      key="day20200509"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      9
    </button>
    <button
      className=""
      key="day20200510"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      10
    </button>
    <button
      className=""
      key="day20200511"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      11
    </button>
    <button
      className=""
      key="day20200512"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      12
    </button>
    <button
      className=""
      key="day20200513"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      13
    </button>
    <button
      className=""
      key="day20200514"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      14
    </button>
    <button
      className=""
      key="day20200515"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      15
    </button>
    <button
      className=""
      key="day20200516"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      16
    </button>
    <button
      className=""
      key="day20200517"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      17
    </button>
    <button
      className=""
      key="day20200518"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      18
    </button>
    <button
      className=""
      key="day20200519"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      19
    </button>
    <button
      className=""
      key="day20200520"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      20
    </button>
    <button
      className=""
      key="day20200521"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      21
    </button>
    <button
      className=""
      key="day20200522"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      22
    </button>
    <button
      className=""
      key="day20200523"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      23
    </button>
    <button
      className=""
      key="day20200524"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      24
    </button>
    <button
      className=""
      key="day20200525"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      25
    </button>
    <button
      className=""
      key="day20200526"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      26
    </button>
    <button
      className=""
      key="day20200527"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      27
    </button>
    <button
      className=""
      key="day20200528"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      28
    </button>
    <button
      className=""
      key="day20200529"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      29
    </button>
    <button
      className=""
      key="day20200530"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      30
    </button>
    <button
      className=""
      key="day20200531"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      31
    </button>
    <button
      className="other-month"
      key="day20200601"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      1
    </button>
    <button
      className="other-month"
      key="day20200602"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      2
    </button>
    <button
      className="other-month"
      key="day20200603"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      3
    </button>
    <button
      className="other-month"
      key="day20200604"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      4
    </button>
    <button
      className="other-month"
      key="day20200605"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      5
    </button>
    <button
      className="other-month"
      key="day20200606"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      6
    </button>
  </div>
</div>
`;
